# Interpretability-first-symbolic-regression

./: .gitignore  README.md  pyproject.toml
configs/: dataset_inventory.yaml  experiment2_formulas.json  frozen_protocol.json  generic_tabular_template.json  history_union_template.json  interpretability_rubric.json  known_formula_tasks.yaml  llm_provider.deepseek.example.json  llm_provider.example.json  lsr_transform_formulas.json  paper_scope.yaml
docs/: experiment2_results_report.md  fast_publication_checklist_zh.md  final_comparison_report.md  first_three_weeks_execution_prompt_zh.md  full_experiment_report.md  implementation_status.md  llm_sr_comparison_report.md  next_gpt_paper_handoff_zh.md  paper_strategy_and_workplan_zh.md  phase1_report.md  phase2_report.md  pilot_report.md
examples/: README.md  factor_proposals.example.json  factor_selection.example.json  rating_manifest.example.jsonl  toy_config.json  toy_regression.csv  实验2_科学公式数据集清单.md
factor_pysr_llm/: __init__.py  cli.py  comparison.py  config.py  cv.py  dataset.py  experiment2.py  expr.py  expression_similarity.py  factor_miner.py  features.py  ifsr_selector.py  interpretability_eval.py  known_data.py  known_formulas.py  lineage.py  llm.py  llm_sr_baselines.py  llm_sr_runner.py  llm_stages.py  llmsrbench_loader.py  llmsrbench_runner.py  mining.py  model_api.py  pilot.py  preprocess.py  pysr_runner.py  rating_aggregate.py  reports.py  splits.py
scripts/: build_final_report.py  run_experiment2_full.py  run_generic_pipeline.sh  run_llm_sr_baselines.py  run_llmsrbench_llm.py  run_llmsrbench_pysr.py  (+3 more)
(+14 files in other folders)
