[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "factor-pysr-llm"
version = "0.1.0"
description = "Workflow for effective-factor union, PySR search, verification, and LLM strategy briefs."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "pyyaml",
]

[project.optional-dependencies]
pysr = ["pysr"]

[project.scripts]
factor-pysr-llm = "factor_pysr_llm.cli:main"

[tool.setuptools.packages.find]
where = ["."]

